16 June 2005:  Menelaos Karavelas
- added some more data sets for testing with regular triangulation's point
  location
- added Locate_type classes
- the locate methods now return proper Locate_type classes instead of Object

12 June 2005:  Menelaos Karavelas
- added point location functionality for Delaunay triangulations, Apollonius
  graphs and segment Voronoi diagrams (in their traits).
- added point location functionality (and testing) in the Voronoi diagram
  adaptor.
- added one more example that does point location.
- added support (and testing) for 1-dimensional Delaunay graphs.
- added some more test data sets for testing point location and support
  for 1-dimensional Delaunay graphs

11 June 2005:  Menelaos Karavelas
- added copyright headers in some files that did not have one
- changed institution in copyright headers
- added Connected_components.h which contains a generic algorithm for
  computing the number of connected components of the Voronoi skeleton

4 June 2005:  Menelaos Karavelas
- in Dummy_iterator and Circulator_from_halfedge_adaptor: operator*() and
  operator->() that returned a const reference and const pointer have been
  removed (in order to avoid warnings by icc/icpc/icl and cl compilers);
  moreover, these operators are not really used.
- in *_Voronoi_traits_2 classes and in Voronoi_traits_concept class:
  icc/icpc/icl and cl compilers have a problem with the declaration of
  Voronoi_edge_base_2 as a friend when this declaration is done through the
  parent class; created a CGAL config file and added the appropriate
  #ifndef - #endif block that checks for this problem.
- fixed warning for unused variables when NDEBUG is defined
- fixed unused variable warning in Halfedge.h and vda_print_report.h

27 May 2005:  Menelaos Karavelas
- changes in the doc:
  * fixed some open issues in the various models of the Voronoi traits concept.
  * added concepts for halfedges, vertices, faces of the Voronoi diagram.